# RAG-COTA

./: README.md  index.html  pyproject.toml
__MACOSX/: ._ai-document-service
__MACOSX/ai-document-service/: ._documents
__MACOSX/ai-document-service/documents/documents/Law on Personal Data Protection/: ._chapter_4.md
ai-document-service-copy/: Dockerfile  app.py  apppy(finetune).md
ai-document-service-copy/chroma_db/b7642471-5839-474c-8904-5fdebf748fd9/: index_metadata.pickle
ai-document-service-copy/documents/: README.md  app.py  pyproject.toml
ai-document-service-copy/documents/documents/Tourinfo/: Cambodia_general.md  Cambodiag.md  angkor.md  banteaymeanchey.md  battambong.md  kampongspue.md  kampot.md  kandal.md  kep.md  kohkong.md  kratie.md  mundolkiri.md  ne.md  oddormeanchey.md  pnhompenh.md  preahsihanouk.md  preahvihear.md  preyveng.md  province.md  ratanakiri.md  siemreab.md  stuengtreang.md  svayrieng.md
