[tool.poetry]
name = "ai-document-service"
version = "0.1.0"
description = "A RAG service for Vertex AI."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"  # <-- Your requested Python version range
Flask = "^3.1.0"
gunicorn = "^22.0.0"
# --- Known-stable LangChain versions ---
langchain = "^0.1.20"
langchain-community = "^0.0.38"
langchain-google-vertexai = "^0.1.3"
# --- Other dependencies ---
pypdf = "^4.3.0"
chromadb = "^0.5.2"
unstructured = "^0.15.0"
google-cloud-aiplatform = "^1.45.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"